test/regtest/cases/errors/unassigned_expr.kum
| disable_exec
алг нач
  цел i,j
  i = j
кон